# DenovoAssemblyTools

./: DeNovoAssembly.yml  README.md  nextflow.config  pyproject.toml  setup.sh
Containers/: BUSCO.def  BUSCO.yml  NTLINK.def  NTLINK.yml  RACON.def  RACON.yml  RAGTAG.def  RAGTAG.yml  TGSGAPCLOSER.def  TGSGAPCLOSER.yml  main.nf
Examples/RawData/: Busco_Test.fa  Test.kraken  Test.report  assembly.fasta  reference.fasta
Examples/Test/DataQC/: TestQC.YCARD.paf  TestQC.Yacrd.fastq  TestQC.yacrd.report
NF/: main.nf
NF/modules/: AssemblyAssessment.nf  AssemblyPolishing.nf  ContigAssembly.nf  ForeignContaminationScreen.nf  GapClosing.nf  GuidedScaffolding.nf  RawDataQC.nf  UnguidedScaffolding.nf
QualityControl/: .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  RawDataQC.nf
Scripts/: AssemblyAssessment.nf  AssemblyPolishing.nf  ContigAssembly.nf  GapClosing.nf  GuidedScaffolding.nf  RawDataQC.nf  UnguidedScaffolding.nf
Setup/: DeNovoAssembly.yml  setup.sh
src/Assembly/: Assembly.py
